--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@ p {
   font-family: "Caveat", cursive;
   font-size: xx-large;
 }
+
+.layout {
+  padding: 7% 12%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
