--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Caveat&family=Yusei+Magic&display=swap");
 
 body {
-  background-image: url("./images/blue-milky-way-galaxy.jpg");
+  background-color: aliceblue;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
+  color: black;
 }
 
 h2,
@@ -31,12 +31,11 @@ p {
   flex-direction: column;
   width: 500px;
   height: 350px;
-  box-shadow: 0 0 60px 30px #fff, 0 0 100px 60px #f0f, 0 0 100px 90px #0ff;
 }
 
 .screen {
   background-color: gray;
-  color: white;
+  color: black;
   padding: 4% 3%;
 }
 
@@ -89,7 +88,7 @@ nav {
 span {
   padding-right: 10px;
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .home {
